--- a/styles/style.css
+++ b/styles/style.css
@@ -31,6 +31,7 @@
   width: 200px;
   height: 150px;
   transition: 0.6s;
+ 
 }
 
 
@@ -75,10 +76,6 @@ header{
 }
 
 /*titulo*/
-
-
-
-
 h1{
   font-size: 50px;
   margin-top: -370px;
@@ -327,6 +324,7 @@ h2{
   font-size: 20px;
   font-family: Arial, Helvetica, sans-serif;
 }
+
 .bibliHolder{
   width: 80vw;
   height: fit-content;
@@ -337,9 +335,24 @@ h2{
 /*responsividade */
 @media screen and (max-width: 900px){
 
+  #logoImg {
+    margin-right: 2px;
+    width: 200px;
+    height: 150px;
+    transition: 0.6s;
+    margin-top: 50px;
+  }
+
   .imgHeader{
-    display: none;
-    }
+    position: absolute;
+    background-image: url("../images/imgFundoMob.jpeg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    width: 100%;
+    height: 600px;
+    z-index: -1;
+    margin-right: 10px;
+  }
 
   .navbaHolder{
     display: flex;
@@ -371,17 +384,18 @@ h2{
     justify-content: center;
     padding-top: 10px;
   }
-
+  
   .tituloPrincipal{
     text-decoration: none;
-    font-size: 50px;
+    font-size: -20px;
     line-break: auto;
     color: black;
     font-family: Georgia, 'Times New Roman', Times, serif;
+    margin-top: -15px;
   }
+
   main{
     margin-top: 100px !important;
-  
   }
 
   #navbar-list{
@@ -423,7 +437,7 @@ h1{
 
 h5{
   text-align: center;
-  color: #363636;
+  color: #484D50;
   font-size: 23px;
 }
 
@@ -506,8 +520,8 @@ h5{
   }
   
   #img-sintomas{
-    width:40vw;
-    height:20vh;
+    width:70vw;
+    height:40vh;
     border-radius: 50px;
     box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.25);
   }
@@ -527,11 +541,12 @@ h5{
   align-items: center;
   width: 100vw;
   height: 70vh;
+  margin-top: 120px;
 }
 
 #img-prevencao{
-    width: 40vw;
-    height: 20vh;
+    width: 50vw;
+    height: 30vh;
     border-radius: 30px;
     box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.25);
   }
@@ -539,7 +554,7 @@ h5{
 
   .legend-prevencao{
     font-family: Arial, Helvetica, sans-serif;
-    font-size: 60%;
+    font-size: 15px;
   
   }
 
@@ -559,21 +574,18 @@ h5{
   font-size: 10px;
   font-family: Arial, Helvetica, sans-serif;
 }
+
 .bibliHolder{
   width: 80vw;
   height: fit-content;
-  word-wrap: break-word;
+  word-wrap: break-word
 }
-
 
 .container-footer{
   text-align: center;
   width: 100vw;
 }
-} 
-
-
-/* desculpa gi mas eu não sei organizar css */
+}
 
 body{
   width: 100vw;
@@ -597,6 +609,7 @@ main{
 .navbar-lista{
 align-self: center;
 }
+
 .titulo{
 display: flex;
 flex-direction: column;
